crates/runtime/src/tests/snapshots/query_type_cast_array_to_array.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT CAST(\n  CAST([1,2,3] AS ARRAY(NUMBER))\n  AS ARRAY(VARCHAR)) AS cast_array;\""
snapshot_kind: text
---
(
    Err(
        SQL(
            ParserError(
                "Expected: ), found: (",
            ),
            None,
        ),
    ),
    Err(
        SQL(
            ParserError(
                "Expected: <, found: (",
            ),
            None,
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
