crates/runtime/src/tests/snapshots/query_type_change_key_names.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT CAST({'city':'San Mateo','state': 'CA'}::OBJECT(city VARCHAR, state VARCHAR)\n  AS OBJECT(city_name VARCHAR, state_name VARCHAR) RENAME FIELDS) AS object_value_key_names;\""
snapshot_kind: text
---
(
    Err(
        SQL(
            ParserError(
                "Expected: ), found: RENAME",
            ),
            None,
        ),
    ),
    Err(
        SQL(
            ParserError(
                "Expected: ), found: RENAME",
            ),
            None,
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
