crates/runtime/src/tests/snapshots/query_type_map_keys.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT MAP_KEYS({'my_key':'my_value'}::MAP(VARCHAR,VARCHAR));\""
snapshot_kind: text
---
(
    Ok(
        Statement(
            Query(
                Query {
                    with: None,
                    body: Select(
                        Select {
                            select_token: TokenWithSpan {
                                token: Word(
                                    Word {
                                        value: "SELECT",
                                        quote_style: None,
                                        keyword: SELECT,
                                    },
                                ),
                                span: Span(Location(0,0)..Location(0,0)),
                            },
                            distinct: None,
                            top: None,
                            top_before_distinct: false,
                            projection: [
                                UnnamedExpr(
                                    Function(
                                        Function {
                                            name: ObjectName(
                                                [
                                                    Ident {
                                                        value: "MAP_KEYS",
                                                        quote_style: None,
                                                        span: Span(Location(0,0)..Location(0,0)),
                                                    },
                                                ],
                                            ),
                                            uses_odbc_syntax: false,
                                            parameters: None,
                                            args: List(
                                                FunctionArgumentList {
                                                    duplicate_treatment: None,
                                                    args: [
                                                        Unnamed(
                                                            Expr(
                                                                Cast {
                                                                    kind: DoubleColon,
                                                                    expr: Dictionary(
                                                                        [
                                                                            DictionaryField {
                                                                                key: Ident {
                                                                                    value: "my_key",
                                                                                    quote_style: Some(
                                                                                        '\'',
                                                                                    ),
                                                                                    span: Span(Location(0,0)..Location(0,0)),
                                                                                },
                                                                                value: Value(
                                                                                    SingleQuotedString(
                                                                                        "my_value",
                                                                                    ),
                                                                                ),
                                                                            },
                                                                        ],
                                                                    ),
                                                                    data_type: Custom(
                                                                        ObjectName(
                                                                            [
                                                                                Ident {
                                                                                    value: "MAP",
                                                                                    quote_style: None,
                                                                                    span: Span(Location(0,0)..Location(0,0)),
                                                                                },
                                                                            ],
                                                                        ),
                                                                        [
                                                                            "VARCHAR",
                                                                            "VARCHAR",
                                                                        ],
                                                                    ),
                                                                    format: None,
                                                                },
                                                            ),
                                                        ),
                                                    ],
                                                    clauses: [],
                                                },
                                            ),
                                            filter: None,
                                            null_treatment: None,
                                            over: None,
                                            within_group: [],
                                        },
                                    ),
                                ),
                            ],
                            into: None,
                            from: [],
                            lateral_views: [],
                            prewhere: None,
                            selection: None,
                            group_by: Expressions(
                                [],
                                [],
                            ),
                            cluster_by: [],
                            distribute_by: [],
                            sort_by: [],
                            having: None,
                            named_window: [],
                            qualify: None,
                            window_before_qualify: false,
                            value_table_mode: None,
                            connect_by: None,
                        },
                    ),
                    order_by: None,
                    limit: None,
                    limit_by: [],
                    offset: None,
                    fetch: None,
                    locks: [],
                    for_clause: None,
                    settings: None,
                    format_clause: None,
                },
            ),
        ),
    ),
    Err(
        NotImplemented(
            "Unsupported SQL type Map(Varchar(None), Varchar(None))",
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
